--- a/Census-V1.ipynb
+++ b/Census-V1.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ML Project: Classification \n",
+    "\n",
+    "## Predict whether income exceeds $50K/yr based on census data\n",
+    "\n",
+    "Authors:\n",
+    "`Andrea Murphy` and `Josh Quigley`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup"
    ]
   },
