--- a/Census-V1.ipynb
+++ b/Census-V1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -52,21 +52,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>39</th>\n",
-       "      <th>State-gov</th>\n",
-       "      <th>77516</th>\n",
-       "      <th>Bachelors</th>\n",
-       "      <th>13</th>\n",
-       "      <th>Never-married</th>\n",
-       "      <th>Adm-clerical</th>\n",
-       "      <th>Not-in-family</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Male</th>\n",
-       "      <th>2174</th>\n",
-       "      <th>0</th>\n",
-       "      <th>40</th>\n",
-       "      <th>United-States</th>\n",
-       "      <th>&lt;=50K</th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -165,29 +165,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   39          State-gov   77516   Bachelors   13        Never-married  \\\n",
-       "0  50   Self-emp-not-inc   83311   Bachelors   13   Married-civ-spouse   \n",
-       "1  38            Private  215646     HS-grad    9             Divorced   \n",
-       "2  53            Private  234721        11th    7   Married-civ-spouse   \n",
-       "3  28            Private  338409   Bachelors   13   Married-civ-spouse   \n",
-       "4  37            Private  284582     Masters   14   Married-civ-spouse   \n",
+       "   age          workclass  fnlwgt   education  education-num  \\\n",
+       "0   50   Self-emp-not-inc   83311   Bachelors             13   \n",
+       "1   38            Private  215646     HS-grad              9   \n",
+       "2   53            Private  234721        11th              7   \n",
+       "3   28            Private  338409   Bachelors             13   \n",
+       "4   37            Private  284582     Masters             14   \n",
        "\n",
-       "         Adm-clerical   Not-in-family   White     Male   2174   0   40  \\\n",
-       "0     Exec-managerial         Husband   White     Male      0   0   13   \n",
-       "1   Handlers-cleaners   Not-in-family   White     Male      0   0   40   \n",
-       "2   Handlers-cleaners         Husband   Black     Male      0   0   40   \n",
-       "3      Prof-specialty            Wife   Black   Female      0   0   40   \n",
-       "4     Exec-managerial            Wife   White   Female      0   0   40   \n",
+       "        marital-status          occupation    relationship    race      sex  \\\n",
+       "0   Married-civ-spouse     Exec-managerial         Husband   White     Male   \n",
+       "1             Divorced   Handlers-cleaners   Not-in-family   White     Male   \n",
+       "2   Married-civ-spouse   Handlers-cleaners         Husband   Black     Male   \n",
+       "3   Married-civ-spouse      Prof-specialty            Wife   Black   Female   \n",
+       "4   Married-civ-spouse     Exec-managerial            Wife   White   Female   \n",
        "\n",
-       "    United-States   <=50K  \n",
-       "0   United-States   <=50K  \n",
-       "1   United-States   <=50K  \n",
-       "2   United-States   <=50K  \n",
-       "3            Cuba   <=50K  \n",
-       "4   United-States   <=50K  "
+       "   capital-gain  capital-loss  hours-per-week  native-country  salary  \n",
+       "0             0             0              13   United-States   <=50K  \n",
+       "1             0             0              40   United-States   <=50K  \n",
+       "2             0             0              40   United-States   <=50K  \n",
+       "3             0             0              40            Cuba   <=50K  \n",
+       "4             0             0              40   United-States   <=50K  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,12 +195,14 @@
    "source": [
     "import pandas as pd\n",
     "data = pd.read_csv('data/adult.data.txt')\n",
+    "data.columns = [\"age\", \"workclass\", \"fnlwgt\", \"education\", \"education-num\", \"marital-status\", \"occupation\", \"relationship\", \"race\",\n",
+    "                           \"sex\", \"capital-gain\", \"capital-loss\", \"hours-per-week\", \"native-country\", \"salary\"]\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -224,21 +226,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>39</th>\n",
-       "      <th>State-gov</th>\n",
-       "      <th>77516</th>\n",
-       "      <th>Bachelors</th>\n",
-       "      <th>13</th>\n",
-       "      <th>Never-married</th>\n",
-       "      <th>Adm-clerical</th>\n",
-       "      <th>Not-in-family</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Male</th>\n",
-       "      <th>2174</th>\n",
-       "      <th>0</th>\n",
-       "      <th>40</th>\n",
-       "      <th>United-States</th>\n",
-       "      <th>&lt;=50K</th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -337,29 +339,29 @@
        "</div>"
       ],
       "text/plain": [
-       "       39      State-gov   77516    Bachelors   13        Never-married  \\\n",
-       "32555  27        Private  257302   Assoc-acdm   12   Married-civ-spouse   \n",
-       "32556  40        Private  154374      HS-grad    9   Married-civ-spouse   \n",
-       "32557  58        Private  151910      HS-grad    9              Widowed   \n",
-       "32558  22        Private  201490      HS-grad    9        Never-married   \n",
-       "32559  52   Self-emp-inc  287927      HS-grad    9   Married-civ-spouse   \n",
+       "       age      workclass  fnlwgt    education  education-num  \\\n",
+       "32555   27        Private  257302   Assoc-acdm             12   \n",
+       "32556   40        Private  154374      HS-grad              9   \n",
+       "32557   58        Private  151910      HS-grad              9   \n",
+       "32558   22        Private  201490      HS-grad              9   \n",
+       "32559   52   Self-emp-inc  287927      HS-grad              9   \n",
        "\n",
-       "             Adm-clerical  Not-in-family   White     Male   2174   0   40  \\\n",
-       "32555        Tech-support           Wife   White   Female      0   0   38   \n",
-       "32556   Machine-op-inspct        Husband   White     Male      0   0   40   \n",
-       "32557        Adm-clerical      Unmarried   White   Female      0   0   40   \n",
-       "32558        Adm-clerical      Own-child   White     Male      0   0   20   \n",
-       "32559     Exec-managerial           Wife   White   Female  15024   0   40   \n",
+       "            marital-status          occupation relationship    race      sex  \\\n",
+       "32555   Married-civ-spouse        Tech-support         Wife   White   Female   \n",
+       "32556   Married-civ-spouse   Machine-op-inspct      Husband   White     Male   \n",
+       "32557              Widowed        Adm-clerical    Unmarried   White   Female   \n",
+       "32558        Never-married        Adm-clerical    Own-child   White     Male   \n",
+       "32559   Married-civ-spouse     Exec-managerial         Wife   White   Female   \n",
        "\n",
-       "        United-States   <=50K  \n",
-       "32555   United-States   <=50K  \n",
-       "32556   United-States    >50K  \n",
-       "32557   United-States   <=50K  \n",
-       "32558   United-States   <=50K  \n",
-       "32559   United-States    >50K  "
+       "       capital-gain  capital-loss  hours-per-week  native-country  salary  \n",
+       "32555             0             0              38   United-States   <=50K  \n",
+       "32556             0             0              40   United-States    >50K  \n",
+       "32557             0             0              40   United-States   <=50K  \n",
+       "32558             0             0              20   United-States   <=50K  \n",
+       "32559         15024             0              40   United-States    >50K  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
        "pandas.core.indexes.range.RangeIndex"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,31 +392,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39                0\n",
-       " State-gov        0\n",
-       " 77516            0\n",
-       " Bachelors        0\n",
-       " 13               0\n",
-       " Never-married    0\n",
-       " Adm-clerical     0\n",
-       " Not-in-family    0\n",
-       " White            0\n",
-       " Male             0\n",
-       " 2174             0\n",
-       " 0                0\n",
-       " 40               0\n",
-       " United-States    0\n",
-       " <=50K            0\n",
+       "age               0\n",
+       "workclass         0\n",
+       "fnlwgt            0\n",
+       "education         0\n",
+       "education-num     0\n",
+       "marital-status    0\n",
+       "occupation        0\n",
+       "relationship      0\n",
+       "race              0\n",
+       "sex               0\n",
+       "capital-gain      0\n",
+       "capital-loss      0\n",
+       "hours-per-week    0\n",
+       "native-country    0\n",
+       "salary            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,20 +424,6 @@
    "source": [
     "data.isnull().sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
