--- a/Census-V1.ipynb
+++ b/Census-V1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -199,7 +199,7 @@
        "4             0             0              40   United-States   <=50K  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "32559         15024             0              40   United-States    >50K  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "pandas.core.indexes.range.RangeIndex"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,17 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop columns won't be useful in analysis and prediction\n",
-    "data_small = data.drop(['fnlwgt'], axis=1)"
+    "data_small = data.drop(['fnlwgt', 'education-num'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,6 @@
        "      <th>age</th>\n",
        "      <th>workclass</th>\n",
        "      <th>education</th>\n",
-       "      <th>education-num</th>\n",
        "      <th>marital-status</th>\n",
        "      <th>occupation</th>\n",
        "      <th>relationship</th>\n",
@@ -495,7 +494,6 @@
        "      <td>50</td>\n",
        "      <td>Self-emp-not-inc</td>\n",
        "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Exec-managerial</td>\n",
        "      <td>Husband</td>\n",
@@ -512,7 +510,6 @@
        "      <td>38</td>\n",
        "      <td>Private</td>\n",
        "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
        "      <td>Divorced</td>\n",
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Not-in-family</td>\n",
@@ -529,7 +526,6 @@
        "      <td>53</td>\n",
        "      <td>Private</td>\n",
        "      <td>11th</td>\n",
-       "      <td>7</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Handlers-cleaners</td>\n",
        "      <td>Husband</td>\n",
@@ -546,7 +542,6 @@
        "      <td>28</td>\n",
        "      <td>Private</td>\n",
        "      <td>Bachelors</td>\n",
-       "      <td>13</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Prof-specialty</td>\n",
        "      <td>Wife</td>\n",
@@ -563,7 +558,6 @@
        "      <td>37</td>\n",
        "      <td>Private</td>\n",
        "      <td>Masters</td>\n",
-       "      <td>14</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Exec-managerial</td>\n",
        "      <td>Wife</td>\n",
@@ -580,12 +574,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   age          workclass   education  education-num       marital-status  \\\n",
-       "0   50   Self-emp-not-inc   Bachelors             13   Married-civ-spouse   \n",
-       "1   38            Private     HS-grad              9             Divorced   \n",
-       "2   53            Private        11th              7   Married-civ-spouse   \n",
-       "3   28            Private   Bachelors             13   Married-civ-spouse   \n",
-       "4   37            Private     Masters             14   Married-civ-spouse   \n",
+       "   age          workclass   education       marital-status  \\\n",
+       "0   50   Self-emp-not-inc   Bachelors   Married-civ-spouse   \n",
+       "1   38            Private     HS-grad             Divorced   \n",
+       "2   53            Private        11th   Married-civ-spouse   \n",
+       "3   28            Private   Bachelors   Married-civ-spouse   \n",
+       "4   37            Private     Masters   Married-civ-spouse   \n",
        "\n",
        "           occupation    relationship    race      sex  capital-gain  \\\n",
        "0     Exec-managerial         Husband   White     Male             0   \n",
@@ -602,13 +596,33 @@
        "4             0              40   United-States   <=50K  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_small.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32560, 13)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_small.shape"
    ]
   },
   {
