--- a/Regression/SocialNews-V1.ipynb
+++ b/Regression/SocialNews-V1.ipynb
@@ -2,6 +2,423 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import random\n",
+    "\n",
+    "import pandas as pd\n",
+    "from pandas import Series,DataFrame\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pylab as plot\n",
+    "params = { \n",
+    "    \"axes.labelsize\": \"large\",\n",
+    "    \"xtick.labelsize\" : \"x-large\",\n",
+    "    \"legend.fontsize\": 20,\n",
+    "    \"figure.dpi\": 150,\n",
+    "    \"figure.figsize\" : [25, 7]\n",
+    "}\n",
+    "plot.rcParams.update(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDLink</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Headline</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>PublishDate</th>\n",
+       "      <th>SentimentTitle</th>\n",
+       "      <th>SentimentHeadline</th>\n",
+       "      <th>Facebook</th>\n",
+       "      <th>GooglePlus</th>\n",
+       "      <th>LinkedIn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>99248.0</td>\n",
+       "      <td>Obama Lays Wreath at Arlington National Cemetery</td>\n",
+       "      <td>Obama Lays Wreath at Arlington National Cemete...</td>\n",
+       "      <td>USA TODAY</td>\n",
+       "      <td>obama</td>\n",
+       "      <td>4/2/02 0:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.053300</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10423.0</td>\n",
+       "      <td>A Look at the Health of the Chinese Economy</td>\n",
+       "      <td>Tim Haywood, investment director business-unit...</td>\n",
+       "      <td>Bloomberg</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>9/20/08 0:00</td>\n",
+       "      <td>0.208333</td>\n",
+       "      <td>-0.156386</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18828.0</td>\n",
+       "      <td>Nouriel Roubini: Global Economy Not Back to 2008</td>\n",
+       "      <td>Nouriel Roubini, NYU professor and chairman at...</td>\n",
+       "      <td>Bloomberg</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>1/28/12 0:00</td>\n",
+       "      <td>-0.425210</td>\n",
+       "      <td>0.139754</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27788.0</td>\n",
+       "      <td>Finland GDP Expands In Q4</td>\n",
+       "      <td>Finland's economy expanded marginally in the t...</td>\n",
+       "      <td>RTT News</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>3/1/15 0:06</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.026064</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27789.0</td>\n",
+       "      <td>Tourism, govt spending buoys Thai economy in J...</td>\n",
+       "      <td>Tourism and public spending continued to boost...</td>\n",
+       "      <td>The Nation - Thailand&amp;#39;s English news</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>3/1/15 0:11</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.141084</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    IDLink                                              Title  \\\n",
+       "0  99248.0   Obama Lays Wreath at Arlington National Cemetery   \n",
+       "1  10423.0        A Look at the Health of the Chinese Economy   \n",
+       "2  18828.0   Nouriel Roubini: Global Economy Not Back to 2008   \n",
+       "3  27788.0                          Finland GDP Expands In Q4   \n",
+       "4  27789.0  Tourism, govt spending buoys Thai economy in J...   \n",
+       "\n",
+       "                                            Headline  \\\n",
+       "0  Obama Lays Wreath at Arlington National Cemete...   \n",
+       "1  Tim Haywood, investment director business-unit...   \n",
+       "2  Nouriel Roubini, NYU professor and chairman at...   \n",
+       "3  Finland's economy expanded marginally in the t...   \n",
+       "4  Tourism and public spending continued to boost...   \n",
+       "\n",
+       "                                     Source    Topic   PublishDate  \\\n",
+       "0                                 USA TODAY    obama   4/2/02 0:00   \n",
+       "1                                 Bloomberg  economy  9/20/08 0:00   \n",
+       "2                                 Bloomberg  economy  1/28/12 0:00   \n",
+       "3                                  RTT News  economy   3/1/15 0:06   \n",
+       "4  The Nation - Thailand&#39;s English news  economy   3/1/15 0:11   \n",
+       "\n",
+       "   SentimentTitle  SentimentHeadline  Facebook  GooglePlus  LinkedIn  \n",
+       "0        0.000000          -0.053300        -1          -1        -1  \n",
+       "1        0.208333          -0.156386        -1          -1        -1  \n",
+       "2       -0.425210           0.139754        -1          -1        -1  \n",
+       "3        0.000000           0.026064        -1          -1        -1  \n",
+       "4        0.000000           0.141084        -1          -1        -1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('News_Final.csv')\n",
+    "test_data = pd.read_csv('News_Test.csv') \n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDLink</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Headline</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>PublishDate</th>\n",
+       "      <th>SentimentTitle</th>\n",
+       "      <th>SentimentHeadline</th>\n",
+       "      <th>Facebook</th>\n",
+       "      <th>GooglePlus</th>\n",
+       "      <th>LinkedIn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>91225</th>\n",
+       "      <td>60337.0</td>\n",
+       "      <td>San Diego economy slips in May</td>\n",
+       "      <td>San Diego County's economy slowed slightly in ...</td>\n",
+       "      <td>The San Diego Union-Tribune</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>6/30/16 23:47</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.177667</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91226</th>\n",
+       "      <td>103879.0</td>\n",
+       "      <td>Durbin: Obama pal's ties to for-profit univers...</td>\n",
+       "      <td>But now that one of President Barack Obama's c...</td>\n",
+       "      <td>Chicago Tribune</td>\n",
+       "      <td>obama</td>\n",
+       "      <td>6/30/16 23:49</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.110773</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91227</th>\n",
+       "      <td>60407.0</td>\n",
+       "      <td>German economy minister: EU stability pact nee...</td>\n",
+       "      <td>German Economy Minister Sigmar Gabriel has cal...</td>\n",
+       "      <td>Reuters via Yahoo! Finance</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>6/30/16 23:59</td>\n",
+       "      <td>0.072169</td>\n",
+       "      <td>-0.145833</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91228</th>\n",
+       "      <td>60593.0</td>\n",
+       "      <td>The Gig Economy's Growing Influence on the Ame...</td>\n",
+       "      <td>There's been much debate about the rise of the...</td>\n",
+       "      <td>Business News Daily</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>7/1/16 0:00</td>\n",
+       "      <td>-0.125000</td>\n",
+       "      <td>0.027518</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91229</th>\n",
+       "      <td>60597.0</td>\n",
+       "      <td>This Is How Hillary Clinton Should Respond to ...</td>\n",
+       "      <td>There's only one right move for the U.S. econo...</td>\n",
+       "      <td>Fortune</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>7/1/16 0:00</td>\n",
+       "      <td>0.104167</td>\n",
+       "      <td>-0.125574</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         IDLink                                              Title  \\\n",
+       "91225   60337.0                     San Diego economy slips in May   \n",
+       "91226  103879.0  Durbin: Obama pal's ties to for-profit univers...   \n",
+       "91227   60407.0  German economy minister: EU stability pact nee...   \n",
+       "91228   60593.0  The Gig Economy's Growing Influence on the Ame...   \n",
+       "91229   60597.0  This Is How Hillary Clinton Should Respond to ...   \n",
+       "\n",
+       "                                                Headline  \\\n",
+       "91225  San Diego County's economy slowed slightly in ...   \n",
+       "91226  But now that one of President Barack Obama's c...   \n",
+       "91227  German Economy Minister Sigmar Gabriel has cal...   \n",
+       "91228  There's been much debate about the rise of the...   \n",
+       "91229  There's only one right move for the U.S. econo...   \n",
+       "\n",
+       "                            Source    Topic    PublishDate  SentimentTitle  \\\n",
+       "91225  The San Diego Union-Tribune  economy  6/30/16 23:47        0.000000   \n",
+       "91226              Chicago Tribune    obama  6/30/16 23:49        0.000000   \n",
+       "91227   Reuters via Yahoo! Finance  economy  6/30/16 23:59        0.072169   \n",
+       "91228          Business News Daily  economy    7/1/16 0:00       -0.125000   \n",
+       "91229                      Fortune  economy    7/1/16 0:00        0.104167   \n",
+       "\n",
+       "       SentimentHeadline  Facebook  GooglePlus  LinkedIn  \n",
+       "91225           0.177667        -1           3         1  \n",
+       "91226           0.110773        15           1         4  \n",
+       "91227          -0.145833        -1           0         0  \n",
+       "91228           0.027518        -1           0        29  \n",
+       "91229          -0.125574        -1           3         3  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.indexes.range.RangeIndex"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IDLink                 0\n",
+       "Title                  0\n",
+       "Headline              14\n",
+       "Source               279\n",
+       "Topic                  0\n",
+       "PublishDate            0\n",
+       "SentimentTitle         0\n",
+       "SentimentHeadline      0\n",
+       "Facebook               0\n",
+       "GooglePlus             0\n",
+       "LinkedIn               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(91230, 11)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
