--- a/Regression/SocialNews-V1.ipynb
+++ b/Regression/SocialNews-V1.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,22 +399,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.dropna(subset=['Headline'])\n",
+    "data = data.dropna(subset=['Headline'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(91230, 11)"
+       "IDLink                 0\n",
+       "Title                  0\n",
+       "Headline              14\n",
+       "Source               279\n",
+       "Topic                  0\n",
+       "PublishDate            0\n",
+       "SentimentTitle         0\n",
+       "SentimentHeadline      0\n",
+       "Facebook               0\n",
+       "GooglePlus             0\n",
+       "LinkedIn               0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "data.isnull().sum()"
    ]
   },
   {
