--- a/Regression/SocialNews-V1.ipynb
+++ b/Regression/SocialNews-V1.ipynb
@@ -399,37 +399,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = data.dropna(subset=['Headline'])\n",
-    "data = data.dropna(subset=['Headline'])"
+    "data = data.dropna(subset=['Source'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "IDLink                 0\n",
-       "Title                  0\n",
-       "Headline              14\n",
-       "Source               279\n",
-       "Topic                  0\n",
-       "PublishDate            0\n",
-       "SentimentTitle         0\n",
-       "SentimentHeadline      0\n",
-       "Facebook               0\n",
-       "GooglePlus             0\n",
-       "LinkedIn               0\n",
+       "IDLink               0\n",
+       "Title                0\n",
+       "Headline             0\n",
+       "Source               0\n",
+       "Topic                0\n",
+       "PublishDate          0\n",
+       "SentimentTitle       0\n",
+       "SentimentHeadline    0\n",
+       "Facebook             0\n",
+       "GooglePlus           0\n",
+       "LinkedIn             0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
