--- a/Regression/SocialNews-V1.ipynb
+++ b/Regression/SocialNews-V1.ipynb
@@ -410,6 +410,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping null values in string subsets "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
