--- a/Classification/censusClassification.ipynb
+++ b/Classification/censusClassification.ipynb
@@ -1132,6 +1132,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Support Vector Machine for Education and Age"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1174,6 +1181,14 @@
     "score = classifier.score(x_test, y_test)\n",
     "\n",
     "print(score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Support Vector Machine\n",
+    "combining Education, age, hours.per.week, and capital.gain with income"
    ]
   },
   {
